<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    
    <ImageView 
        android:id="@+id/weather_image_cities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/weather_img_descrip"
        android:src="@drawable/nodata_icon" />
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <TextView
            android:id="@+id/date_lbl" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_date"
            android:textSize="@dimen/text_date_size"/>
        
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_lbl"/>
            
           	<TextView 
            	android:id="@+id/wind_lbl"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/default_wind"/>
            
        </LinearLayout>
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_lbl"/>
            
            <TextView
                android:id="@+id/max_temp" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_max_temp"/>
            
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
           <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_lbl"/>
            
            <TextView
                android:id="@+id/min_temp" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_min_temp"/>
            
        </LinearLayout>
        
    </LinearLayout>
    

</LinearLayout>
